--- a/shivek _aarif/home.html
+++ b/shivek _aarif/home.html
@@ -43,6 +43,9 @@
                 <p>Stay updated with smart notifications.</p>
             </div>
         </section>
+        <section>
+            hi my name is  shivek yadav what about you
+        </section>
     </main>
     <footer>
         <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
