--- a/shivek _aarif/dashboard.html
+++ b/shivek _aarif/dashboard.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="preplaintrip.html">Dashboard</a></li>
                 <li><a href="trip-planning.html">Trip Planning</a></li>
                 <li><a href="recommendations.html">Recommendations</a></li>
                 <li><a href="communication.html">Communication</a></li>
